--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c524cb7194ad835c4122d5c23ee8a55b",
+    "/css/app.css": "/css/app.css?id=f03c1d7857241db0a0877be2a6aa2137"
 }
